# dragon_curves

./: .gitignore  README.md  core.py  curve.py  draw_a_curve.py  draw_four_dragons.py  draw_ordered_curve.py  make_a_tile.py  pyproject.toml  seq.py  tilable-curve.py
.github/workflows/: run-tests.yml  style-checks.yml
dragon_curves/: __init__.py  dragon.py
examples/: draw_a_curve.py  draw_four_dragons.py  draw_ordered_curve.py  make_a_tile.py  test_examples.py
test/: test_dragon.py
